--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 sudo: false
 language: bash
 script:
-- bash bin/btest
-- bash -u bin/btest
+- bash bin/bashtub `find test -name '*_test.sh'`
+- bash -u bin/bashtub `find test -name '*_test.sh'`
